# sync-nyc-rental-scraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  run_pipeline.bat
.github/workflows/: main.yml
nycrental/config/: settings.py
nycrental/extractors/: address_extractor.py  street_easy_extractor.py
nycrental/transfomers/: street_easy_transformer.py
nycrental/utils/: logger.py
scripts/: nycrental_pipeline.py
