[project]
name = "simple-nyc-rental-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[tool.uv]
cache-dir=".cache"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyarrow>=19.0.0",
    "ruff>=0.9.6",
]
